# stats-rethinking

./: .gitignore  LICENSE  README.md  pyproject.toml
week01/: exercises.ipynb
week02/: exercises.ipynb  exploration.ipynb
week03/: exercises.ipynb
week04/: blossoms.csv  exercises.ipynb  happiness.csv
week05/: exercises.ipynb
week06/: exercises.ipynb  radon.ipynb
