[tool.poetry]
name = "Stats rethinking"
version = "0.1.0"
description = "Statistical rethinking"
authors = ["David Masip < [david.masip@glovoapp.com] >"]

[tool.poetry.dependencies]
python = "3.8.6"
pandas = ">=1.1.5"
pymc3 = ">=3.11.2"
pymc3-quap = ">=0.1.0"
ipykernel = ">=5.5.0"
seaborn = ">=0.11.1"
statsmodels = ">=0.12.2"
# numpy = "<1.20.0"
# Theano-PyMC = ">=1.0.0"
# bambi = ">=0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"